--- a/ui-website-project/21_CurrentPassword.html
+++ b/ui-website-project/21_CurrentPassword.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>title123</title>
+    <title>Settings</title>
+    <link rel="stylesheet" href="setting_source.css">
+    <style>
+        .h1 {
+            font-size: 40px;
+            border: rgba(225, 225, 225, 0.5) solid 2px;
+            border-radius: 25px;
+        }
+    </style>
 </head>
 <body>
-    
+    div class="wrapper" >
+    <div class="sidebar">
+        <h1 class="h1"><i class="fas fa-cog"></i> Settings</h1>
+        <ul style="list-style: none;">
+            <li><a href="#">Change Password</a></li>
+            <li><a href="#">Privacy Settings</a></li>
+            <li><a href="#">Change Payment</a></li>
+            <li><a href="#">Cancel Membership</a></li>
+            <li><a href="#">Delete Account</a></li>
+        </ul>
+    </div>
+    </div>
 </body>
 </html>
