--- a/ui-website-project/22_PrivacySettings.html
+++ b/ui-website-project/22_PrivacySettings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings</title>
-    <link rel="stylesheet" href="setting_source.css">
+    <link rel="stylesheet" href="/ui-website-project/css/style.css">
     <style>
         .h1 {
             font-size: 40px;
