--- a/ui-website-project/22_PrivacySettings.html
+++ b/ui-website-project/22_PrivacySettings.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    div class="wrapper" >
+    <div class="wrapper">
     <div class="sidebar">
         <h1 class="h1"><i class="fas fa-cog"></i> Settings</h1>
         <ul style="list-style: none;">
