--- a/ui-website-project/22_PrivacySettings.html
+++ b/ui-website-project/22_PrivacySettings.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
     <title>Settings</title>
-    <link rel="stylesheet" href="ui-website-project/css/setting_source.css">
+    <link rel="stylesheet" href="css/setting_source.css">
     <style>
         .h1 {
             font-size: 40px;
